# embedded-huffman

./: .gitignore  Cargo.toml  README.md
benches/: compression.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  tree.rs
