[package]
name = "embedded-huffman"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
std = []
cli = ["dep:smol", "std"]

[dependencies]
heapless = "0.8.0"
smol = { version = "2.0.2", optional = true }

[dev-dependencies]
smol = "2.0.2"
humanize-bytes = "1.0.6"
