[package]
name = "embedded-huffman"
version = "0.1.2"
edition = "2021"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
description = "A paginated, streaming library for Huffman coding on embedded."
license = "MIT OR Apache-2.0"
repository = "https://github.com/qsib-cbie/embedded-heatshrink"
homepage = "https://github.com/qsib-cbie/embedded-heatshrink"
documentation = "https://docs.rs/embedded-heatshrink"
keywords = ["compression", "embedded", "no_std", "huffman", "alloc"]
categories = ["embedded", "compression", "no-std"]
readme = "README.md"

[lib]
crate-type = ["rlib"]

[features]
default = []
std = []
cli = ["dep:smol", "std"]

[dependencies]
heapless = "0.8.0"
smol = { version = "2.0.2", optional = true }

[dev-dependencies]
smol = "2.0.2"
humanize-bytes = "1.0.6"
divan = "0.1.15"

[[bench]]
name = "compression"
harness = false

[[bin]]
name = "hfz"
required-features = ["cli"]
